@@ -1526,6 +1526,10 @@ __ENTRYPOINTS__
 
 =head1 CONSTANTS
 
+
+__CONSTANTS_POD_PREAMBLE__
+
+
 =over 8
 
 __CONSTANTS_POD__
