@@ -75,6 +75,10 @@ __PRIVATE_EPS__
 
 =head1 CONSTANTS
 
+
+__CONSTANTS_POD_PREAMBLE__
+
+
 =over 8
 
 __CONSTANTS_POD__
