@@ -3,6 +3,7 @@
 0.2.4    TO BE RELEASED
    [Added]
        * Accessors for name, UUID, MAC, etc
+       * Code examples at the top of the CONSTANTS sections
    [Fixed]
        * Process connections ('*+ext://' URI) don't pick up the 'command'
          query parameter
